[package]
name = "test_program"
version = "0.1.0"
description = "Simple test program for verification testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_program"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-program = "2.3.0"

